build: modernize reflective instantiation